# obSecure

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt
client/include/: ConfigManager.h  CryptoManager.h  KeyManager.h  MainWindow.h  MessageProtocol.h  NetworkManager.h  PhoneAuthManager.h  ServerAPI.h  UserManager.h  X3DHManager.h
client/src/: ConfigManager.cpp  CryptoManager.cpp  KeyManager.cpp  MainWindow.cpp  MessageProtocol.cpp  NetworkManager.cpp  PhoneAuthManager.cpp  ServerAPI.cpp  UserManager.cpp  X3DHManager.cpp  main.cpp
server/: DOCKERFILE  app.py  config.py  docker-compose.yml  init.sql  models.py  requirements.txt
server/routes/: auth.py  keys.py
server/utils/: crypto_utils.py  phone_utils.py
src/: main.cpp
src/core/: CryptoManager.cpp  CryptoManager.h  KeyManager.cpp  KeyManager.h  MessageProtocol.cpp  MessageProtocol.h  UserManager.cpp  UserManager.h
src/gui/: MainWindow.cpp  MainWindow.h
src/network/: NetworkManager.cpp  NetworkManager.h
